# LogColors

./: .editorconfig  .gitignore  CMakeLists.txt  Colors.hpp  LICENSE  LogColors.hpp  README.md  debian  gen_one_header.sh
.github/workflows/: release.yml
hpp/: Mode.hpp  Terminal.hpp  Types.hpp
include/: Concepts.hpp  Defines.hpp  LogColors.hpp  Mode.hpp  Terminal.hpp
include/ipp/: Mode.hpp
include/tpp/: Operators.hpp  Terminal.hpp
ipp/: LogColors.ipp
tests/: for_readme.cpp  main.cpp
tpp/: LogColors.tpp  Operators.tpp
